@@ -1346,6 +1346,7 @@
           06-06-26  Bfo     Make some more things NET_SUPPORT dependent
           06-06-26  Bfo     SEGV handler introduced, which allows now to catch bus errors !
           06-06-28  Bfo     SEGV handler ( __try/__except ) introduced for Windows 
+          06-06-29  Bfo     SEGV handler for Windows is re-entrant now
     3.32  06-??-??  Bfo
     ------------------- 
       
